--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-google-maps/api": "^2.20.7",
+    "@react-oauth/google": "^0.12.2",
     "@tanstack/react-query": "^5.81.2",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.523.0",
     "luxon": "^3.6.1",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
