--- a/package.json
+++ b/package.json
@@ -34,10 +34,13 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-paystack": "^6.0.0",
+    "react-phone-input-2": "^2.15.1",
     "tailwind-merge": "^3.3.1",
     "timeago": "^1.6.7",
     "timeago.js": "^4.0.2",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
