--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.523.0",
     "luxon": "^3.6.1",
+    "moment": "^2.30.1",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
