--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-icons": "^5.5.0",
     "react-paystack": "^6.0.0",
     "react-phone-input-2": "^2.15.1",
+    "react-qr-code": "^2.0.18",
+    "react-to-print": "^3.1.1",
     "tailwind-merge": "^3.3.1",
     "timeago": "^1.6.7",
     "timeago.js": "^4.0.2",
