--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
     "iconsax-reactjs": "^0.0.8",
     "input-otp": "^1.4.2",
     "jotai": "^2.12.5",
+    "latest": "^0.2.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.523.0",
     "luxon": "^3.6.1",
     "moment": "^2.30.1",
-    "next": "15.3.4",
+    "next": "^16.1.6",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "react-paystack": "^6.0.0",
     "react-phone-input-2": "^2.15.1",
